fix: aligned mobile sidebar close button with title

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -43,8 +43,6 @@
     --button-padding: 0.5rem 1rem;
     --sidebar-padding: 1.5rem;
 
-    --top-bar-height: 3rem;
-
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --icon-size: 1.2rem;
 }
@@ -1010,10 +1008,7 @@ button.disabled-button:hover .button-wrapper {
     
     body {
         flex-direction: column;
-    }
-    
-    .main-content {
-        height: calc(100vh - (1.5 * var(--medium-gap)) - var(--top-bar-height));
+        height: 100vh;
     }
 
     .page-title-bar {
@@ -1043,7 +1038,6 @@ button.disabled-button:hover .button-wrapper {
 
     .mobile-top-bar {
         width: 100%;
-        height: var(--top-bar-height);
         display: flex;
         justify-content: space-between;
     }
@@ -1055,7 +1049,7 @@ button.disabled-button:hover .button-wrapper {
         font-family: var(--main-font);
         cursor: pointer;
         z-index: 10000;
-        padding-left: var(--medium-gap);
+        padding: var(--medium-gap);
     }
 
     .button {
